B-F Sandbox Full-Backup/src/objects/Configuration_to_Visit__c.object
<CustomObject>
    <description>Test object to show a way to report on visits</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Outlet_Visit_Item__r.Outlet_Visit__r.Account__r.Id ,  Outlet_Visit_Item__r.Outlet_Visit__r.Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlet_Visit_Date__c</fullName>
        <formula>Outlet_Visit_Item__r.Outlet_Visit__r.Visit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outlet_Visit_Item__c</fullName>
        <label>Outlet Visit Item</label>
        <referenceTo>Outlet_Visit_Item__c</referenceTo>
        <relationshipLabel>Configuration to Visits</relationshipLabel>
        <relationshipName>Configuration_to_Visits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Outlet_Visit__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Outlet_Visit_Item__r.Outlet_Visit__r.Id , Outlet_Visit_Item__r.Outlet_Visit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Visit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Report_Configuration__c</fullName>
        <label>Visit Report Configuration</label>
        <referenceTo>Visit_Report_Configuration__c</referenceTo>
        <relationshipLabel>Configuration to Visits</relationshipLabel>
        <relationshipName>Configuration_to_Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Configuration to Visit</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration to Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>